extra margin above footer fixed

--- a/frontend/app/[slug]/page.module.css
+++ b/frontend/app/[slug]/page.module.css
@@ -1,6 +1,4 @@
-.page {
-  padding-bottom: 14px;
-}
+
 
 .PageNotFound {
   height: 60vh;
